@@ -133,7 +133,7 @@ vit_penalty_count_lv: 3
 attack_direction_change: 15
 
 // Remove elemental modifiers from normal attacks (skills will always have elemental modifiers)? (Note 4)
-attack_attr_none: 0
+attack_attr_none: 14
 
 // Rate at which equipment can break (base rate before it's modified by any skills)
 // 1 = 0.01% chance. Default for official servers: 0
